parser/bbyCBLParser.py
# Generated from bbyCBL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class bbyCBLParser ( Parser ):

    grammarFileName = "bbyCBL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'AUTHOR'", 
                     "<INVALID>", "'INSTALLATION'", "'SECURITY'", "'DATE-COMPILED'", 
                     "'BASE'", "'COPY'", "'DESCRIPTION'", "'PICTURE'", "'IS'", 
                     "'LIKE'", "'OCCURS'", "'ACCEPT'", "'ADD'", "'ALSO'", 
                     "'ALTER'", "'AND'", "'BY'", "'CALL'", "'CONTENT'", 
                     "<INVALID>", "'DELIMITED'", "'DISPLAY'", "'DIVIDE'", 
                     "'ELSE'", "'END'", "'OFF'", "'END-EVALUATE'", "'END-IF'", 
                     "'ERROR'", "'EVALUATE'", "'FALSE'", "'FROM'", "'GIVING'", 
                     "'GO'", "'IF'", "'INTO'", "'LOOP'", "'LOW-VALUES'", 
                     "'MOVE'", "'MULTIPLY'", "<INVALID>", "'NOT'", "'OF'", 
                     "'ON'", "'OR'", "'OTHER'", "'PERFORM'", "'PROCEED'", 
                     "'REFERENCE'", "'REMAINDER'", "'REPLACING'", "'RUN'", 
                     "'SIGNAL'", "'SIZE'", "'SPACE'", "'SPACES'", "'STOP'", 
                     "'SUBTRACT'", "'THEN'", "<INVALID>", "'TIMES'", "'TO'", 
                     "'TRUE'", "'UNTIL'", "'USING'", "'VALUE'", "'VARYING'", 
                     "'WHEN'", "'WHILE'", "<INVALID>", "'WITH'", "'NO'", 
                     "'ADVANCING'", "'XOR'", "','", "'.'", "'('", "')'", 
                     "'+'", "'-'", "'*'", "'/'", "'**'", "'='", "'<>'", 
                     "'<='", "'>='", "'<'", "'>'", "'==='", "'=='", "<INVALID>", 
                     "'HIGH-VALUES'" ]

    symbolicNames = [ "<INVALID>", "FLOAT", "NUMBER", "DATE", "DATE_UNDERSCORE", 
                      "ANY_DATE", "ANY_DATE_UNDERSCORE", "IDENTIFICATION_DIVISION", 
                      "DATA_DIVISION", "PROCEDURE_DIVISION", "PROGRAM_ID", 
                      "AUTHOR", "DATE_WRITTEN", "INSTALLATION", "SECURITY", 
                      "DATE_COMPILED", "BASE", "COPY", "DESCRIPTION", "PICTURE", 
                      "IS", "LIKE", "OCCURS", "ACCEPT", "ADD", "ALSO", "ALTER", 
                      "AND", "BY", "CALL", "CONTENT", "DELIMITED_BY", "DELIMITED", 
                      "DISPLAY", "DIVIDE", "ELSE", "END", "OFF", "END_EVALUATE", 
                      "END_IF", "ERROR", "EVALUATE", "FALSE", "FROM", "GIVING", 
                      "GO", "IF", "INTO", "LOOP", "LOW_VALUES", "MOVE", 
                      "MULTIPLY", "NEXT_SENTENCE", "NOT", "OF", "ON", "OR", 
                      "OTHER", "PERFORM", "PROCEED", "REFERENCE", "REMAINDER", 
                      "REPLACING", "RUN", "SIGNAL", "SIZE", "SPACE", "SPACES", 
                      "STOP", "SUBTRACT", "THEN", "THROUGH", "TIMES", "TO", 
                      "TRUE", "UNTIL", "USING", "VALUE", "VARYING", "WHEN", 
                      "WHILE", "WITH_NO_ADVANCING", "WITH", "NO", "ADVANCING", 
                      "XOR", "COMMA", "DOT", "LPAREN", "RPAREN", "PLUS", 
                      "MINUS", "MULT", "DIV", "POW", "EQ", "NE", "LE", "GE", 
                      "LT", "GT", "TRIPLE_EQUAL", "DOUBLE_EQUAL", "STRING", 
                      "HIGH_VALUES", "IDENTIFIER", "WS" ]

    RULE_program = 0
    RULE_identificationDivision = 1
    RULE_identificationClause = 2
    RULE_dataDivision = 3
    RULE_dataEntry = 4
    RULE_dataCopyStmt = 5
    RULE_levelNumber = 6
    RULE_pictureClause = 7
    RULE_picturePattern = 8
    RULE_pictureElement = 9
    RULE_likeClause = 10
    RULE_occursClause = 11
    RULE_procedureDivision = 12
    RULE_usingClause = 13
    RULE_paragraph = 14
    RULE_sentence = 15
    RULE_statement = 16
    RULE_identifier = 17
    RULE_simpleId = 18
    RULE_evalSubject = 19
    RULE_acceptStmt = 20
    RULE_addStmt = 21
    RULE_alterStmt = 22
    RULE_callStmt = 23
    RULE_copySource = 24
    RULE_copyStmt = 25
    RULE_replacePair = 26
    RULE_replaceBlock = 27
    RULE_equalDelim = 28
    RULE_displayItem = 29
    RULE_delimiterSpec = 30
    RULE_valueSpec = 31
    RULE_displayStmt = 32
    RULE_divideStmt = 33
    RULE_evaluateStmt = 34
    RULE_givingClause = 35
    RULE_gotoStmt = 36
    RULE_ifStmt = 37
    RULE_loopStmt = 38
    RULE_loopControl = 39
    RULE_moveStmt = 40
    RULE_multiplyStmt = 41
    RULE_nextSentenceStmt = 42
    RULE_performStmt = 43
    RULE_signalStmt = 44
    RULE_stopStmt = 45
    RULE_subtractStmt = 46
    RULE_untilClause = 47
    RULE_varyingClause = 48
    RULE_varyingStmt = 49
    RULE_whenClause = 50
    RULE_whileClause = 51
    RULE_exprList = 52
    RULE_condition = 53
    RULE_simpleCond = 54
    RULE_comparator = 55
    RULE_identifierSegment = 56
    RULE_qualifiedId = 57
    RULE_expr = 58
    RULE_literal = 59

    ruleNames =  [ "program", "identificationDivision", "identificationClause", 
                   "dataDivision", "dataEntry", "dataCopyStmt", "levelNumber", 
                   "pictureClause", "picturePattern", "pictureElement", 
                   "likeClause", "occursClause", "procedureDivision", "usingClause", 
                   "paragraph", "sentence", "statement", "identifier", "simpleId", 
                   "evalSubject", "acceptStmt", "addStmt", "alterStmt", 
                   "callStmt", "copySource", "copyStmt", "replacePair", 
                   "replaceBlock", "equalDelim", "displayItem", "delimiterSpec", 
                   "valueSpec", "displayStmt", "divideStmt", "evaluateStmt", 
                   "givingClause", "gotoStmt", "ifStmt", "loopStmt", "loopControl", 
                   "moveStmt", "multiplyStmt", "nextSentenceStmt", "performStmt", 
                   "signalStmt", "stopStmt", "subtractStmt", "untilClause", 
                   "varyingClause", "varyingStmt", "whenClause", "whileClause", 
                   "exprList", "condition", "simpleCond", "comparator", 
                   "identifierSegment", "qualifiedId", "expr", "literal" ]

    EOF = Token.EOF
    FLOAT=1
    NUMBER=2
    DATE=3
    DATE_UNDERSCORE=4
    ANY_DATE=5
    ANY_DATE_UNDERSCORE=6
    IDENTIFICATION_DIVISION=7
    DATA_DIVISION=8
    PROCEDURE_DIVISION=9
    PROGRAM_ID=10
    AUTHOR=11
    DATE_WRITTEN=12
    INSTALLATION=13
    SECURITY=14
    DATE_COMPILED=15
    BASE=16
    COPY=17
    DESCRIPTION=18
    PICTURE=19
    IS=20
    LIKE=21
    OCCURS=22
    ACCEPT=23
    ADD=24
    ALSO=25
    ALTER=26
    AND=27
    BY=28
    CALL=29
    CONTENT=30
    DELIMITED_BY=31
    DELIMITED=32
    DISPLAY=33
    DIVIDE=34
    ELSE=35
    END=36
    OFF=37
    END_EVALUATE=38
    END_IF=39
    ERROR=40
    EVALUATE=41
    FALSE=42
    FROM=43
    GIVING=44
    GO=45
    IF=46
    INTO=47
    LOOP=48
    LOW_VALUES=49
    MOVE=50
    MULTIPLY=51
    NEXT_SENTENCE=52
    NOT=53
    OF=54
    ON=55
    OR=56
    OTHER=57
    PERFORM=58
    PROCEED=59
    REFERENCE=60
    REMAINDER=61
    REPLACING=62
    RUN=63
    SIGNAL=64
    SIZE=65
    SPACE=66
    SPACES=67
    STOP=68
    SUBTRACT=69
    THEN=70
    THROUGH=71
    TIMES=72
    TO=73
    TRUE=74
    UNTIL=75
    USING=76
    VALUE=77
    VARYING=78
    WHEN=79
    WHILE=80
    WITH_NO_ADVANCING=81
    WITH=82
    NO=83
    ADVANCING=84
    XOR=85
    COMMA=86
    DOT=87
    LPAREN=88
    RPAREN=89
    PLUS=90
    MINUS=91
    MULT=92
    DIV=93
    POW=94
    EQ=95
    NE=96
    LE=97
    GE=98
    LT=99
    GT=100
    TRIPLE_EQUAL=101
    DOUBLE_EQUAL=102
    STRING=103
    HIGH_VALUES=104
    IDENTIFIER=105
    WS=106

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificationDivision(self):
            return self.getTypedRuleContext(bbyCBLParser.IdentificationDivisionContext,0)


        def EOF(self):
            return self.getToken(bbyCBLParser.EOF, 0)

        def dataDivision(self):
            return self.getTypedRuleContext(bbyCBLParser.DataDivisionContext,0)


        def procedureDivision(self):
            return self.getTypedRuleContext(bbyCBLParser.ProcedureDivisionContext,0)


        def getRuleIndex(self):
            return bbyCBLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = bbyCBLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.identificationDivision()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 121
                self.dataDivision()


            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 124
                self.procedureDivision()


            self.state = 127
            self.match(bbyCBLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificationDivisionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICATION_DIVISION(self):
            return self.getToken(bbyCBLParser.IDENTIFICATION_DIVISION, 0)

        def identificationClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bbyCBLParser.IdentificationClauseContext)
            else:
                return self.getTypedRuleContext(bbyCBLParser.IdentificationClauseContext,i)


        def getRuleIndex(self):
            return bbyCBLParser.RULE_identificationDivision

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificationDivision" ):
                listener.enterIdentificationDivision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificationDivision" ):
                listener.exitIdentificationDivision(self)




    def identificationDivision(self):

        localctx = bbyCBLParser.IdentificationDivisionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identificationDivision)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(bbyCBLParser.IDENTIFICATION_DIVISION)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 19707758373239928) != 0) or ((((_la - 66)) & ~0x3f) == 0 and ((1 << (_la - 66)) & 824633725335) != 0):
                self.state = 130
                self.identificationClause()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificationClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM_ID(self):
            return self.getToken(bbyCBLParser.PROGRAM_ID, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(bbyCBLParser.DOT)
            else:
                return self.getToken(bbyCBLParser.DOT, i)

        def identifier(self):
            return self.getTypedRuleContext(bbyCBLParser.IdentifierContext,0)


        def DATE(self):
            return self.getToken(bbyCBLParser.DATE, 0)

        def DATE_UNDERSCORE(self):
            return self.getToken(bbyCBLParser.DATE_UNDERSCORE, 0)

        def ANY_DATE(self):
            return self.getToken(bbyCBLParser.ANY_DATE, 0)

        def ANY_DATE_UNDERSCORE(self):
            return self.getToken(bbyCBLParser.ANY_DATE_UNDERSCORE, 0)

        def AUTHOR(self):
            return self.getToken(bbyCBLParser.AUTHOR, 0)

        def DATE_WRITTEN(self):
            return self.getToken(bbyCBLParser.DATE_WRITTEN, 0)

        def INSTALLATION(self):
            return self.getToken(bbyCBLParser.INSTALLATION, 0)

        def SECURITY(self):
            return self.getToken(bbyCBLParser.SECURITY, 0)

        def DATE_COMPILED(self):
            return self.getToken(bbyCBLParser.DATE_COMPILED, 0)

        def BASE(self):
            return self.getToken(bbyCBLParser.BASE, 0)

        def COPY(self):
            return self.getToken(bbyCBLParser.COPY, 0)

        def copySource(self):
            return self.getTypedRuleContext(bbyCBLParser.CopySourceContext,0)


        def REPLACING(self):
            return self.getToken(bbyCBLParser.REPLACING, 0)

        def replacePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bbyCBLParser.ReplacePairContext)
            else:
                return self.getTypedRuleContext(bbyCBLParser.ReplacePairContext,i)


        def DESCRIPTION(self):
            return self.getToken(bbyCBLParser.DESCRIPTION, 0)

        def simpleId(self):
            return self.getTypedRuleContext(bbyCBLParser.SimpleIdContext,0)


        def getRuleIndex(self):
            return bbyCBLParser.RULE_identificationClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificationClause" ):
                listener.enterIdentificationClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificationClause" ):
                listener.exitIdentificationClause(self)




    def identificationClause(self):

        localctx = bbyCBLParser.IdentificationClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identificationClause)
        self._la = 0 # Token type
        try:
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(bbyCBLParser.PROGRAM_ID)
                self.state = 137
                self.match(bbyCBLParser.DOT)
                self.state = 143
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 138
                    self.identifier()
                    pass

                elif la_ == 2:
                    self.state = 139
                    self.match(bbyCBLParser.DATE)
                    pass

                elif la_ == 3:
                    self.state = 140
                    self.match(bbyCBLParser.DATE_UNDERSCORE)
                    pass

                elif la_ == 4:
                    self.state = 141
                    self.match(bbyCBLParser.ANY_DATE)
                    pass

                elif la_ == 5:
                    self.state = 142
                    self.match(bbyCBLParser.ANY_DATE_UNDERSCORE)
                    pass


                self.state = 145
                self.match(bbyCBLParser.DOT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(bbyCBLParser.AUTHOR)
                self.state = 147
                self.match(bbyCBLParser.DOT)
                self.state = 148
                self.identifier()
                self.state = 149
                self.match(bbyCBLParser.DOT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.match(bbyCBLParser.DATE_WRITTEN)
                self.state = 152
                self.match(bbyCBLParser.DOT)
                self.state = 156
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 153
                    self.match(bbyCBLParser.DATE)
                    pass

                elif la_ == 2:
                    self.state = 154
                    self.match(bbyCBLParser.DATE_UNDERSCORE)
                    pass

                elif la_ == 3:
                    self.state = 155
                    self.identifier()
                    pass


                self.state = 158
                self.match(bbyCBLParser.DOT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 159
                self.match(bbyCBLParser.INSTALLATION)
                self.state = 160
                self.match(bbyCBLParser.DOT)
                self.state = 161
                self.identifier()
                self.state = 162
                self.match(bbyCBLParser.DOT)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 164
                self.match(bbyCBLParser.SECURITY)
                self.state = 165
                self.match(bbyCBLParser.DOT)
                self.state = 166
                self.identifier()
                self.state = 167
                self.match(bbyCBLParser.DOT)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 169
                self.match(bbyCBLParser.DATE_COMPILED)
                self.state = 170
                self.match(bbyCBLParser.DOT)
                self.state = 173
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 171
                    self.match(bbyCBLParser.DATE)
                    pass

                elif la_ == 2:
                    self.state = 172
                    self.identifier()
                    pass


                self.state = 175
                self.match(bbyCBLParser.DOT)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 176
                self.match(bbyCBLParser.BASE)
                self.state = 177
                self.match(bbyCBLParser.DOT)
                self.state = 178
                self.identifier()
                self.state = 179
                self.match(bbyCBLParser.DOT)
                pass
